# QT-qroilib

./: OpenCV_manual(Kor).docx  README.md  dialogthreshold.cpp  dialogthreshold.ui  qroilib_manual(kor).docx
build-qroilcdmeasure-Qt_5_9_0-Debug/: .qmake.stash  Makefile  ui_dialogcamera.h
qgecam/: qgecam.pro
qgecam/app/: camerasession.cpp  camerasession.h  camerasession_p.h  cameravalidationpage.cpp  cameravalidationpage.h  cameravalidationpage_p.h  common.cpp  common.h  config.cpp  config.h  dialogconfig.cpp  dialogconfig.h  dialogconfig.ui  discoverypage.cpp  discoverypage.h  discoverypage_p.h  forceippage.cpp  forceippage.h  forceippage_p.h  genicamtreeview.cpp  genicamtreeview.h  geviport.cpp  geviport.h  gvcputils.cpp  gvcputils.h  gvcputils_p.h  gvsppage.cpp  gvsppage.h  gvsppage_p.h  gvspwidget.cpp  gvspwidget.h  htmltable.cpp  (+17 more)
qgecam/genicam/: CMakeLists.txt  boolean.cpp  boolean.h  boolean_p.h  bootstrap.xml  category.cpp  category.h  category_p.h  command.cpp  command.h  command_p.h  converter.cpp  converter.h  converter_p.h  enumentry.cpp  enumentry.h  enumentry_p.h  enumeration.cpp  enumeration.h  enumeration_p.h  floatjgv.cpp  floatjgv.h  floatjgv_p.h  floatreg.cpp  floatreg.h  floatreg_p.h  formula.cpp  formula.h  formula_p.h  genicam.cpp  genicam.h  genicammodel.cpp  genicammodel.h  genicammodel_p.h  genicamobjectbuilder.cpp  genicamobjectbuilder.h  genicamobjectbuilder_p.h  genicamxmlfile.cpp  genicamxmlfile.h  genicamxmlfile_p.h  (+67 more)
qgecam/genicam/gui/: genicambooleditor.cpp  genicambooleditor.h  genicambooleditor_p.h  genicambuttoneditor.cpp  genicambuttoneditor.h  genicambuttoneditor_p.h  genicamcomboboxeditor.cpp  genicamcomboboxeditor.h  genicamcomboboxeditor_p.h  genicamdelegate.cpp  genicamdelegate.h  genicamdoubleeditor.cpp  genicamdoubleeditor.h  genicamdoubleeditor_p.h  genicameditor.cpp  genicameditor.h  genicamint64editor.cpp  genicamint64editor.h  genicamint64editor_p.h  genicamipv4editor.cpp  genicamipv4editor.h  genicamipv4editor_p.h  genicamlineeditor.cpp  genicamlineeditor.h  genicamlineeditor_p.h  genicammodel.cpp  genicammodel.h
qgecam/genicam/qtiocompressor/: qtiocompressor.cpp  qtiocompressor.h
qgecam/gvcpdevices/: CMakeLists.txt  bootstrapregisters.cpp  bootstrapregisters.h  bootstrapregisters_p.h  discoveryhelper.cpp  discoveryhelper.h  forceiphelper.cpp  forceiphelper.h  gvcp.h  gvcpclient.cpp  gvcpclient.h  gvcpclient_p.h  gvcpdiscoverer.cpp  gvcpdiscoverer.h  gvcpdiscoverer_p.h  headerhelper.cpp  headerhelper.h  packethelper.cpp  packethelper.h  readmemhelper.cpp  readmemhelper.h  readreghelper.cpp  readreghelper.h  writememhelper.cpp  writememhelper.h  writereghelper.cpp  writereghelper.h
qgecam/gvspdevices/: CMakeLists.txt  ColorConversion.h  bayer.cpp  gvsp.h  gvspblock.cpp  gvspblock.h  gvspdevices.h  gvspmemoryallocator.cpp  gvspmemoryallocator.h  gvspmemoryallocator_p.h  gvsppacket.cpp  gvsppacket.h  gvspreceiver.cpp  gvspreceiver.h  gvspreceiver_p.h  timestampdate.cpp  timestampdate.h  timestampdate_p.h
qroialign/: qroialign.pro  resources.qrc
qroiapp/: config.ini  qq  qroiapp.desktop  qroiapp.pro  qroiapp_ko.qm  qroiapp_ko.ts  readme.md  readme.md~  resources.qrc
qroicapture/: qroicapture.pro
qroieditor/: qroieditor.pro  qroieditor.pro.user.9169c43
qroilcdmeasure/: qroilcdmeasure.pro  readme.md  readme.md~
qroilib/: qroilib.pri  qroilib.pro  readme.txt
qroimulticap/: qroimulticap.pro
qroipicam/: qroipicam.pro
qroisimulator/: dialogapplication.cpp  hsv_ref.docx  qroisimulator.pro  qroisimulator.pro.user.839b602  qroisimulator.pro.user.a2b7ece  resources.qrc  viewoutpage.cpp  viewoutpage.h
qroistereo/: qroistereo.pro
qroiviewer/: qroiviewer.pro  qroiviewer.pro.user.a2b7ece
serial/: qextserialenumerator.h  qextserialenumerator_p.h  qextserialport.cpp  qextserialport.h  qextserialport.pro  qextserialport_global.h  qextserialport_p.h
winlib/: glext.h  glxext.h  leptonica-1.76.0.lib  opencv_world340.lib  opencv_world340d.lib  tesseract40.lib
(+495 files in other folders)
